class DataValidator:
    def __init__(self):
        pass
    
    def validate_email(self, email: str) -> bool:
        return True
    
    def validate_password(self, password: str) -> bool:
        return True
    
    def validate_username(self, username: str) -> bool:
        return True
    
    def validate_date_time(self, date_time: str) -> bool:
        return True
    
    def validate_capacity(self, capacity: int) -> bool:
        return True
    
    def validate_name(self, name: str) -> bool:
        return True
    
    def validate_duration(self, duration: float) -> bool:
        return True