class ShareableLink:
    def __int__(self, link_id: str, booking_id: int):
        self.link_id = link_id
        self.booking_id = booking_id