class TimeManager:
    def __init__(self):
        pass
